--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,11 +1,16 @@
 <html>
   <head>
+    <title>About</title>
+    <link rel="icon" href='/img/weather.png'>
     <link rel='stylesheet' href='/css/styles.css' />
   </head>
 
   <body>
-    {{>header}}
-    <img src='/img/blank-profile.png' />
+    <div class="main-content">
+      {{>header}}
+      <img class="portrait" src='/img/blank-profile.png' />
+    </div>
+
     {{>footer}}
   </body>
 </html>
